build_log.log
[ 61%] Built target box2d
[ 69%] Built target digital_curling__digital_curling
[ 77%] Built target unit_test
Consolidate compiler generated dependencies of target digital_curling__server
[ 78%] Building CXX object apps/server/CMakeFiles/digital_curling__server.dir/main.cpp.o
/DigitalCurling/apps/server/main.cpp: In function 'int main(int, char* const*)':
/DigitalCurling/apps/server/main.cpp:77:101: error: no matching function for call to 'digital_curling::server::Log::Debug(std::basic_ostream<char>&)'
   77 |         Log::Debug(std::ostringstream() << "log file path: " << std::filesystem::absolute(file_name));
      |                                                                                                     ^
In file included from /DigitalCurling/apps/server/main.cpp:7:
/DigitalCurling/apps/server/log.hpp:38:17: note: candidate: 'static void digital_curling::server::Log::Debug(std::string_view)'
   38 |     static void Debug(std::string_view message);
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:38:40: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'std::string_view' {aka 'std::basic_string_view<char>'}
   38 |     static void Debug(std::string_view message);
      |                       ~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/log.hpp:40:17: note: candidate: 'static void digital_curling::server::Log::Debug(const ostringstream&)'
   40 |     static void Debug(std::ostringstream const& message)
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:40:49: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'const ostringstream&' {aka 'const std::__cxx11::basic_ostringstream<char>&'}
   40 |     static void Debug(std::ostringstream const& message)
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/main.cpp:78:81: error: no matching function for call to 'digital_curling::server::Log::Debug(std::basic_ostream<char>&)'
   78 |         Log::Debug(std::ostringstream() << "game id: " << server_setting.game_id);
      |                                                                                 ^
In file included from /DigitalCurling/apps/server/main.cpp:7:
/DigitalCurling/apps/server/log.hpp:38:17: note: candidate: 'static void digital_curling::server::Log::Debug(std::string_view)'
   38 |     static void Debug(std::string_view message);
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:38:40: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'std::string_view' {aka 'std::basic_string_view<char>'}
   38 |     static void Debug(std::string_view message);
      |                       ~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/log.hpp:40:17: note: candidate: 'static void digital_curling::server::Log::Debug(const ostringstream&)'
   40 |     static void Debug(std::ostringstream const& message)
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:40:49: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'const ostringstream&' {aka 'const std::__cxx11::basic_ostringstream<char>&'}
   40 |     static void Debug(std::ostringstream const& message)
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/main.cpp:112:81: error: no matching function for call to 'digital_curling::server::Log::Debug(std::basic_ostream<char>::__ostream_type&)'
  112 |         Log::Debug(std::ostringstream() << "port 0: " << listen_endpoint0.port());
      |                                                                                 ^
In file included from /DigitalCurling/apps/server/main.cpp:7:
/DigitalCurling/apps/server/log.hpp:38:17: note: candidate: 'static void digital_curling::server::Log::Debug(std::string_view)'
   38 |     static void Debug(std::string_view message);
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:38:40: note:   no known conversion for argument 1 from 'std::basic_ostream<char>::__ostream_type' {aka 'std::basic_ostream<char>'} to 'std::string_view' {aka 'std::basic_string_view<char>'}
   38 |     static void Debug(std::string_view message);
      |                       ~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/log.hpp:40:17: note: candidate: 'static void digital_curling::server::Log::Debug(const ostringstream&)'
   40 |     static void Debug(std::ostringstream const& message)
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:40:49: note:   no known conversion for argument 1 from 'std::basic_ostream<char>::__ostream_type' {aka 'std::basic_ostream<char>'} to 'const ostringstream&' {aka 'const std::__cxx11::basic_ostringstream<char>&'}
   40 |     static void Debug(std::ostringstream const& message)
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/main.cpp:115:81: error: no matching function for call to 'digital_curling::server::Log::Debug(std::basic_ostream<char>::__ostream_type&)'
  115 |         Log::Debug(std::ostringstream() << "port 1: " << listen_endpoint1.port());
      |                                                                                 ^
In file included from /DigitalCurling/apps/server/main.cpp:7:
/DigitalCurling/apps/server/log.hpp:38:17: note: candidate: 'static void digital_curling::server::Log::Debug(std::string_view)'
   38 |     static void Debug(std::string_view message);
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:38:40: note:   no known conversion for argument 1 from 'std::basic_ostream<char>::__ostream_type' {aka 'std::basic_ostream<char>'} to 'std::string_view' {aka 'std::basic_string_view<char>'}
   38 |     static void Debug(std::string_view message);
      |                       ~~~~~~~~~~~~~~~~~^~~~~~~
/DigitalCurling/apps/server/log.hpp:40:17: note: candidate: 'static void digital_curling::server::Log::Debug(const ostringstream&)'
   40 |     static void Debug(std::ostringstream const& message)
      |                 ^~~~~
/DigitalCurling/apps/server/log.hpp:40:49: note:   no known conversion for argument 1 from 'std::basic_ostream<char>::__ostream_type' {aka 'std::basic_ostream<char>'} to 'const ostringstream&' {aka 'const std::__cxx11::basic_ostringstream<char>&'}
   40 |     static void Debug(std::ostringstream const& message)
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
make[2]: *** [apps/server/CMakeFiles/digital_curling__server.dir/build.make:90: apps/server/CMakeFiles/digital_curling__server.dir/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:352: apps/server/CMakeFiles/digital_curling__server.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
